Fix display of dataTables
* Tables where not instantiated as dataTables.
* Alignment of dataTable search input field was misaligned
  when more than one dataTable was present.

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -83,7 +83,7 @@ i {
  Datatables general styling
 **************************/
 
-#dataset_table_filter {
+.dataTables_filter {
   display: flex;
   justify-content: flex-end;
 }
